--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -4821,6 +4821,10 @@
 	<integer>2</integer>
 	<key>MaxVertically</key>
 	<false/>
+	<key>NeverWarnAboutShortLivedSessions_FDDA4C7A-4D0E-4F52-9763-AC9628BDDD00</key>
+	<true/>
+	<key>NeverWarnAboutShortLivedSessions_FDDA4C7A-4D0E-4F52-9763-AC9628BDDD00_selection</key>
+	<integer>0</integer>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -5503,11 +5507,11 @@
 			<key>Name</key>
 			<string>ahmet-iTerm2</string>
 			<key>Non Ascii Font</key>
-			<string>Menlo-Regular 9</string>
+			<string>Menlo-Regular 10</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Menlo-Regular 9</string>
+			<string>Menlo-Regular 10</string>
 			<key>Open Toolbelt</key>
 			<false/>
 			<key>Option Key Sends</key>
@@ -5945,7 +5949,7 @@
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<true/>
+	<false/>
 	<key>ShowNewOutputIndicator</key>
 	<true/>
 	<key>ShowPaneTitles</key>
