--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	email = ahmetb@google.com
 	# signingkey = D6B55F79FA3E5337008D6EBD07BA366BF4164719
 	name = Ahmet Alp Balkan
-	email = ahmet@twitter.com
+	email = ahmetalpbalkan@gmail.com
 
 [gpg]
 	program = gpg
