--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 [core]
 	pager = diff-so-fancy | less --tabs=4 -RFX
 	editor = vim
-	excludesfile = /home/ahmetb/.gitignore_global
+	excludesfile = ~/.gitignore_global
 
 [interactive]
 	diffFilter = delta --color-only --width 100
