portable gh path

--- a/.gitconfig
+++ b/.gitconfig
@@ -55,7 +55,7 @@
 	postBuffer = 524288000
 [credential "https://github.com"]
 	helper = 
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !gh auth git-credential
 [credential "ssh://github.com"]
 	helper = !gh auth git-credential
 [advice]
