--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -7,7 +7,7 @@
 	<key>AllowClipboardAccess</key>
 	<false/>
 	<key>AlternateMouseScroll</key>
-	<false/>
+	<true/>
 	<key>AlwaysAcceptFirstMouse</key>
 	<false/>
 	<key>AnimateDimming</key>
@@ -5469,13 +5469,13 @@
 			<key>Name</key>
 			<string>ahmet-iTerm2</string>
 			<key>Non Ascii Font</key>
-			<string>HackNF-Regular 24</string>
+			<string>HackNF-Regular 17</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Non-ASCII Ligatures</key>
 			<false/>
 			<key>Normal Font</key>
-			<string>BerkeleyMono-Regular 24</string>
+			<string>BerkeleyMono-Regular 17</string>
 			<key>Open Toolbelt</key>
 			<false/>
 			<key>Option Key Sends</key>
