--- a/.oh-my-posh.omp.yaml
+++ b/.oh-my-posh.omp.yaml
@@ -18,12 +18,12 @@ blocks:
       - type: kubectl
         style: powerline
         powerline_symbol: "⎈ "
-        template: "<b>{{.Context}}</b>{{with .Namespace}}:{{abbrev 14 .}}{{end}}"
+        template: "<b>{{.Context}}</b>{{with .Namespace}}:{{abbrev 25 .}}{{end}}"
         foreground: "#C6FF00"
         background: "#33691E"
         background_templates:
         - '{{if or (contains "prod" .Context) (contains "grid" .Context) }}#B71C1C{{end}}'
-        - '{{if hasPrefix "ei" .Context }}#F57F17{{end}}'
+        - '{{if hasPrefix "ei" .Context }}#30336b{{end}}'
         foreground_templates:
         - '{{if or (contains "prod" .Context) (contains "grid" .Context) }}#FFCDD2{{end}}'
         - '{{if hasPrefix "ei" .Context }}#FFFFFF{{end}}'
