--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -5468,6 +5468,8 @@ The script should do this: \(ai.prompt)</string>
 				<key>Red Component</key>
 				<real>0.0</real>
 			</dict>
+			<key>Load Shell Integration Automatically</key>
+			<true/>
 			<key>Log Directory</key>
 			<string></string>
 			<key>Minimum Contrast</key>
@@ -5477,13 +5479,13 @@ The script should do this: \(ai.prompt)</string>
 			<key>Name</key>
 			<string>ahmet-iTerm2</string>
 			<key>Non Ascii Font</key>
-			<string>HackNF-Regular 15</string>
+			<string>HackNF-Regular 18</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Non-ASCII Ligatures</key>
 			<false/>
 			<key>Normal Font</key>
-			<string>BerkeleyMono-Regular 15</string>
+			<string>BerkeleyMono-Regular 18</string>
 			<key>Open Toolbelt</key>
 			<false/>
 			<key>Option Key Sends</key>
