--- a/.oh-my-posh.omp.yaml
+++ b/.oh-my-posh.omp.yaml
@@ -16,6 +16,8 @@ blocks:
         template: "{{ .PromptMark }}"
 
       - type: kubectl
+        properties:
+          cache_timeout: 0
         style: powerline
         powerline_symbol: "⎈ "
         template: "<b>{{.Context}}</b>{{with .Namespace}}:{{abbrev 25 .}}{{end}}"
